# EvolutionSim

./: .gitignore  CMakeLists.txt  README.md
include/: App.hpp  globals.hpp
include/core/: Agent.hpp  SimulationSystem.hpp  WorldState.hpp
include/render/: GridRenderer.hpp
include/ui/: DebugPanel.hpp  PlotPanel.hpp  SimulationPanel.hpp
src/: App.cpp
src/core/: SimulationSystem.cpp
src/render/: GridRenderer.cpp
src/ui/: DebugPanel.cpp
